fix: use `Collections.unmodifiableList` to allow null values in `sequence`/`traverse`
  `List.copyOf()` throws `NPE` on null elements, breaking `sequence` and
  `traverse` when `Try.run()` produces `Success(null)`. Switch to
  `Collections.unmodifiableList()` which preserves the unmodifiable
  guarantee while tolerating null values. Add regression test covering
  the `Try.run()` case.